hphp/hack/test/typecheck/enum_class_label/memoized_no_such_class.php
<?hh

<<__Memoize(NoSuchClass#KeyedByIC)>>
function foo(): void {}
